fix: Refactored email templates, created base email

--- a/views/email/login.pug
+++ b/views/email/login.pug
@@ -29,7 +29,7 @@ block content
                           p(style='margin: 0; word-break: break-word; font-weight: 700; font-size: 1rem')
                             | Hi #{firstname},
                           p(style='margin-top: 5px; word-break: break-word;')
-                            | Congratulations! You've successfully logged in to your Blogera account. Your stories and insights are now just a click away.
+                            | You've successfully logged in to your Blogera account. Your stories and insights are now just a click away.
                           p(style='margin-top: 10px; word-break: break-word; font-weight: bold; font-weight: 700; font-size: 1rem')
                             | Login Details:
                           p(style='word-break: break-word; margin-left:0px; padding-left:0px;')
